Fixed badge dark mode text color

--- a/src/app.css
+++ b/src/app.css
@@ -84,7 +84,7 @@
     --input: 225 3% 54%;
     /* need to be updated */
     --primary: 220 6% 20%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary-foreground: 223 4% 64%;
     /* --secondary: 220 6% 20%;
     --secondary-foreground: 223 4% 64%; */
     /* Hover property */
